static/css/styles.css
/* Global Styles */
body, html {
  margin: 0;
  padding: 0;
  font-family: 'IBM Plex Sans', sans-serif;
  background-color: #0b132b;
  color: #fff;
  overflow-x: hidden;
}

.fullpage-container {
  height: 100vh;
  position: relative;
  overflow: hidden
}

.sections-wrapper {
  position: absolute;
  width: 100%;
  height: 100%;
}

.section {
  height: 100vh;
  width: 100vw;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  transition: opacity 0.7s ease;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.active-section {
  opacity: 1;
  z-index: 1;
}

.section:not(.active-section) {
  z-index: 0;
}

.section-indicator {
  position: fixed;
  right: 20px;
  top: 50%;
  transform: translateY(-50%);
  z-index: 10;
}

.section-indicator ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.section-indicator li {
  width: 10px;
  height: 10px;
  border-radius: 50%;
  background-color: rgba(255, 255, 255, 0.5);
  margin: 10px 0;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.section-indicator li.active {
  background-color: #4ecca3;
}

.container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

/* Hero Section */
.hero-section {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  background: radial-gradient(circle, rgba(43, 45, 66, 1), rgba(10, 24, 49, 1));
  position: relative;
  overflow: hidden;
}

/* Text content animation */
.text-content h1, .text-content p, #explore-btn {
  opacity: 0;
  transform: translateY(30px);
  animation: fadeInUp 1s ease forwards;
}

.text-content {
  z-index: 2;
  max-width: 1200px;
  padding: 0 20px;
}

.text-content h1 {
  font-size: 3.5em;
  margin-bottom: 20px;
  color: #4ecca3;
  transition-delay: 0s;
}

.text-content p {
  font-size: 1.2em;
  margin-bottom: 30px;
  transition-delay: 0.3s;
}

#explore-btn {
  display: inline-block;
  padding: 15px 30px;
  font-size: 1.2em;
  background-color: #4ecca3;
  color: #1a1a2e;
  text-decoration: none;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: all 0.3s ease;
  transition-delay: 0.6s;
}


#explore-btn:hover {
  background-color: #45b393;
  transform: translateY(-3px);
  box-shadow: 0 4px 15px rgba(78, 204, 163, 0.4);
}

/* Viewport for tablets and medium screens (max-width: 1024px) */
@media (max-width: 1024px) {
  .hero-section {
      padding-top: 80px; /* Move content higher */
  }

  .text-content h1 {
      font-size: 3em;
  }

  .text-content p {
      font-size: 1.2em;
  }

  #explore-btn {
      margin-top: 15px; /* Adjust button margin */
  }
}

/* Viewport for smaller devices like mobile phones (max-width: 768px) */
@media (max-width: 768px) {
  .hero-section {
      padding-top: 60px; /* Further reduce padding to move content up */
  }

  .text-content h1 {
      font-size: 2.2em;
  }

  .text-content p {
      font-size: 1em;
  }

  #explore-btn {
      margin-top: 10px;
  }
}

/* Viewport for very small devices like iPhone SE (max-width: 375px) */
@media (max-width: 375px) {
  .hero-section {
      padding-top: 30px; /* Significantly reduce padding to move up */
  }

  .text-content h1 {
      font-size: 1.8em;
  }

  .text-content p {
      font-size: 0.9em;
  }

  #explore-btn {
      margin-top: 5px;
      padding: 10px 20px; /* Adjust button size */
  }
}

/* Viewport for extra small devices (max-width: 320px) */
@media (max-width: 320px) {
  .hero-section {
      padding-top: 20px; /* Minimal padding */
  }

  .text-content h1 {
      font-size: 1.6em;
  }

  .text-content p {
      font-size: 0.8em;
  }

  #explore-btn {
      margin-top: 5px;
      padding: 8px 15px; /* Further adjust button size */
  }
}




/* Energy Animation */
.animation-container {
  opacity: 0;
  position: absolute;
  top: 15%;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  overflow: hidden;
  animation: fadeInUp 1s ease forwards;
  animation-delay: 0.4s;
}

.energy-flow {
  width: 100%;
  height: 100%;
}

.energy-path {
  fill: none;
  stroke: url(#energyGradient);
  stroke-width: 3;
  stroke-linecap: round;
  stroke-dasharray: 20, 10;
  animation: flowAnimation 30s linear infinite;
}

.energy-glow {
  fill: none;
  stroke: url(#energyGradient);
  stroke-width: 15;
  stroke-linecap: round;
  filter: blur(8px);
  opacity: 0.6;
  animation: flowAnimation 30s linear infinite;
}

@keyframes flowAnimation {
  to {
    stroke-dashoffset: -1000;
  }
}

@keyframes fadeInUp {
  0% {
    opacity: 0;
    transform: translateY(30px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}
/* About Section */
.about-section {
  padding: 20px 10px; /* Reduced padding for a tighter layout */
  background-color: #16213e;
}

.about-content {
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  flex-direction: column; /* Keep column layout for smaller screens */
  align-items: center; /* Center align content */
}

.about-text {
  flex: 1;
  text-align: center; /* Centered text */
  color: #4ecca3;
  padding: 20px; /* Add some padding */
  margin-bottom: 50px; /* Add margin to separate from images */
  position: relative; /* Allow for absolute positioning of text */
  top: -50px; /* Move text higher */
}

.about-text h2 {
  font-size: 3em; /* Base font size */
  margin-bottom: 20px;
}

.about-text p {
  font-size: 1.5em; /* Base font size for paragraphs */
  line-height: 1.6; /* Increased line height for better readability */
  margin-bottom: 20px;
}

.about-images {
  display: flex;
  justify-content: center; /* Center images */
  flex-wrap: wrap;
  gap: 20px;
}

.about-image {
  width: 100%; /* Make images responsive */
  max-width: 250px; /* Set a maximum width for images */
  border-radius: 10px;
  transition: transform 0.3s ease;
}

.about-image:hover {
  transform: scale(1.1); /* Scale effect on hover */
}

/* Responsive Styles */
@media (max-width: 768px) {
  .about-text {
      top: -30px; 
  }

  .about-text h2 {
      font-size: 2.5em; 
  }

  .about-text p {
      font-size: 1.2em; 
  }

  .about-image {
      max-width: 200px; 
  }
}

@media (max-width: 480px) {
  .about-text {
      top: 0; 
      padding: 10px; 
  }

  .about-text h2 {
      font-size: 2em; 
  }

  .about-text p {
      font-size: 1em; 
  }

  .about-image {
      max-width: 150px; 
  }
}
/* Additional Styles for iPhone SE and Smaller Devices */
@media (max-width: 375px) { 
  .about-text {
      top: 0; 
      padding: 5px;
      margin-bottom: 
  }

  .about-text h2 {
      font-size: 1.8em; 
  }

  .about-text p {
      font-size: 0.9em; 
  }

  .about-image {
      max-width: 120px; 
  }
}


/* Scroll Animations */
.fade-in {
  opacity: 0;
  transform: translateY(50px);
  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
}

.fade-in.appear {
  opacity: 1;
  transform: translateY(0);
}



/* Loading screen styles */
#loading-screen {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(135deg, rgba(26, 26, 46, 0.9), rgba(22, 33, 62, 0.7));
  backdrop-filter: blur(5px);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 1000;
  border-radius: 15px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
}

#earth-icon {
  width: 100px;
  height: auto; 
  animation: spin 2s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

/* Instructions styles */
#instructions {
  display: none;
  position: absolute;
  z-index: 1;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 2em;
  color: #fcfffe;
  text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
  animation: breath 4s infinite ease-in-out;
  pointer-events: none;
}

@keyframes breath {
  0%, 100% {
    transform: translate(-50%, -50%) scale(1);
  }
  50% {
    transform: translate(-50%, -50%) scale(1.2);
  }
}

#globe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.slider-container {
  position: fixed; /* Fixed positioning */
  top: 10px; /* Position at the top */
  left: 10px; /* Position on the left */
  z-index: 10; /* Higher than the globe */
  margin: 20px;
  font-size: 1.5em;
  padding: 20px;
  border-radius: 10px;
}

.renewable-energy-display {
  margin-top: 15px;
  font-size: 1.2em;
  color: #4ecca3;
}

input[type="range"] {
    -webkit-appearance: none; /* Removes default styling */
    width: 200px; /* Set width */
    height: 8px; /* Set height */
    background: #4ecca3; /* Background color */
    border-radius: 5px; /* Rounded corners */
    outline: none; /* Removes outline */
    opacity: 0.7; /* Slight transparency */
    transition: opacity 0.2s; /* Smooth transition */
}

input[type="range"]:hover {
    opacity: 1; /* Full visibility on hover */
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none; /* Custom thumb */
    width: 20px; /* Thumb width */
    height: 20px; /* Thumb height */
    background: #ffffff; /* Thumb color */
    cursor: pointer; /* Pointer cursor */
    border-radius: 50%; /* Round shape */
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3); /* Shadow for thumb */
}

input[type="range"]::-moz-range-thumb {
    width: 20px; /* Thumb width */
    height: 20px; /* Thumb height */
    background: #ffffff; /* Thumb color */
    cursor: pointer; /* Pointer cursor */
    border-radius: 50%; /* Round shape */
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3); /* Shadow for thumb */
}

input[type="range"]::-ms-thumb {
    width: 20px; /* Thumb width */
    height: 20px; /* Thumb height */
    background: #ffffff; /* Thumb color */
    cursor: pointer; /* Pointer cursor */
    border-radius: 50%; /* Round shape */
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3); /* Shadow for thumb */
}


/* Styles for smaller viewports */
@media (max-width: 1056px) {
  #instructions {
    font-size: 1.5em;
  }
}


@media (max-width: 768px) {
  body {
    font-size: 14px; /* Reduce font size for smaller screens */
  }

  #instructions {
    font-size: 1em;
  }

  .slider-container {
    font-size: 1.2em; /* Scale down slider container font size */
    padding: 15px; /* Adjust padding */
  }

  .renewable-energy-display {
    font-size: 1em; /* Scale down renewable energy display */
  }

  input[type="range"] {
    width: 150px; /* Reduce slider width */
  }
}

@media (max-width: 480px) {
  body {
    font-size: 12px; /* Further reduce font size for very small screens */
  }

  #instructions {
    font-size: 0.8em;
  }

  .slider-container {
    font-size: 1em; /* Further scale down slider container font size */
    padding: 10px; /* Adjust padding */
  }

  .renewable-energy-display {
    font-size: 0.9em; /* Adjust renewable energy display size */
  }

  input[type="range"] {
    width: 120px; /* Reduce slider width more */
  }
}

